# obsidian-me

./: .gitignore  CLAUDE.md  README.md  hot.md  usage.md
.obsidian/: community-plugins.json
assets/: vault-docs.css
config/claude/: .env.example  README.md
config/git-hooks/: README.md  pre-commit
daily-notes/: 2026-04-15.md
knowledge/: README.md  kanban-usage.md  lessons.md  multi-repo-conventions.md  patterns.md  snippets.md  tools.md
orchestrator/: activity.log.md  board.md  control.md  dashboard.md  design.md  next-id.md
orchestrator/devices/: mac-studio.md
personal/investments/scripts/: biome.json  build.py  package.json  pyproject.toml  redactions.example.json  tsconfig.json
personal/investments/scripts/investments/: __init__.py  analytics.py  classify.py  datastore.py  explorer.js  ledger.js  mask.py  parse.py  render.py
personal/investments/scripts/src/: analytics.test.ts  analytics.ts  build.ts  classify.test.ts  classify.ts  datastore.test.ts  datastore.ts  ledger.js  mask.test.ts  mask.ts  parse.test.ts  parse.ts  render.test.ts  render.ts
personal/investments/scripts/styles/: app.css  build-css.sh  tailwind.config.js
personal/investments/scripts/tests/: conftest.py  test_analytics.py  test_classify.py  test_datastore.py  test_mask.py  test_parse.py  test_render.py
projects/: CLAUDE.md
skills/: obsidian-resume.md  obsidian-save.md
standup/: 2026-04-15.md
templates/: bug-report.md  daily-note.md  decision-record.md  default-note.md  entity.md  feature-spec.md  project-log.md  source.md  standup.md
wiki/: hot.md  index.md
(+41 files in other folders)
