[project]
name = "investments-analyzer"
version = "0.1.0"
requires-python = ">=3.13"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.6", "ty>=0.0.1a1"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 8

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
